--- a/application/modules/front/views/scripts/activities/read.phtml
+++ b/application/modules/front/views/scripts/activities/read.phtml
@@ -8,16 +8,22 @@ $activity = $this->activity;
 ?>
 
 
-<div class="activity">
-    <a href="<?= $this->baseUrl(); ?>activity"><?= _('GLOBAL_BACK') ?></a>
+<div class="activity page">
+    <p class="back"><a href="<?= $this->baseUrl(); ?>activity"><?= _('GLOBAL_BACK') ?></a></p>
+
     <h2><?= $activity->title ?></h2>
 
     <div class="contenu"><?= $activity->content ?></div>
     <?php if (count($activity->illustrations) > 0): ?>
-    <h3><?= _('NEWS_ELEMENT_ILLUSTRATION') ?></h3>
-    <ul>
+    <h3><?= _('ACTIVITY_ELEMENT_ILLUSTRATION') ?></h3>
+    <ul class="illustrations">
         <?php foreach ($activity->illustrations as $illustration): ?>
-        <li>
+        <li style="background-image: url(<?=$this->displayImage(
+            $illustration->filename,
+            Llv_Constant_File_Category::ACTIVITY,
+            200,
+            9999
+        );?>)">
             <a href="<?=
                 $this->displayImage(
                     $illustration->filename,
