--- a/application/modules/back/views/scripts/partial/menu.phtml
+++ b/application/modules/back/views/scripts/partial/menu.phtml
@@ -5,47 +5,47 @@ $items['home'] = array(
     'controller' => 'index',
     'action'     => 'index',
     'label'      => _('GLOBAL_MENU_HOME'),
-    'current'    => array('index')
+    'actions'    => array('index')
 );
 /** Carrousel */
 $items['carrousel'] = array(
     'controller' => 'index',
     'action'     => 'carrousel-list',
     'label'      => _('GLOBAL_MENU_CARROUSEL'),
-    'current'    => array('carrousel-list', 'carrousel-add')
+    'actions'    => array('carrousel-list', 'carrousel-add')
 );
 /** Liste des actualités */
 $items['news'] = array(
     'controller' => 'news',
     'label'      => _('GLOBAL_MENU_NEWS'),
-    'current'    => array('edit', 'index', 'list')
+    'actions'    => array('edit', 'index', 'list')
 );
 /** Liste des activités */
 $items['activities'] = array(
     'controller' => 'activities',
     'label'      => _('GLOBAL_MENU_ACTIVITIES'),
-    'current'    => array('edit', 'index', 'list')
+    'actions'    => array('edit', 'index', 'list')
 );
 /** Liste des chambres d'hôtes */
 $items['chambres'] = array(
     'controller' => 'products',
     'action'     => 'guesthouse-room-list',
     'label'      => _('GLOBAL_MENU_CHAMBRES'),
-    'current'    => array('edit', 'index', 'list')
+    'actions'    => array('edit', 'index', 'list')
 );
 /** Liste des logements du gite */
 $items['gite'] = array(
     'controller' => 'products',
     'action'     => 'chalet-room-list',
     'label'      => _('GLOBAL_MENU_GITE'),
-    'current'    => array('edit', 'index', 'list')
+    'actions'    => array('edit', 'index', 'list')
 );
 /** Partenaires */
 $items['partners'] = array(
     'controller' => 'index',
     'action'     => 'partners',
     'label'      => _('GLOBAL_MENU_PARTNERS'),
-    'current'    => array('partners')
+    'actions'    => array('partners')
 );
 echo $this->displayMainMenu($items);
 ?>
