--- a/application/modules/front/views/scripts/news/list.phtml
+++ b/application/modules/front/views/scripts/news/list.phtml
@@ -20,9 +20,6 @@ $i = 0;
         <a href="<?= $this->baseUrl(); ?>news/read/id/<?= $spotlight->id; ?>">
             <div class="spotlight">
                 <div class="left">
-                    <h3>
-                        <?= $spotlight->title; ?>
-                    </h3>
                     <?php if (isset($spotlight->illustrations[0])): ?>
                     <img
                         src="<?=
@@ -36,7 +33,10 @@ $i = 0;
                     <?php endif; ?>
                 </div>
                 <div class="right">
-                    <p><?= $spotlight->content; ?></p>
+                    <h3>
+                        <?= $spotlight->title; ?>
+                    </h3>
+                    <p><?= $this->shortify($spotlight->content, 1000); ?></p>
                 </div>
             </div>
         </a>
@@ -55,7 +55,7 @@ $i = 0;
                             </h3>
                         </div>
                         <div class="right">
-                            <p><?= $newsItem->content; ?></p>
+                            <p><?= $this->shortify($newsItem->content, 400); ?></p>
                         </div>
                     </li>
                 </a>
