--- a/application/modules/front/views/scripts/partial/menu.phtml
+++ b/application/modules/front/views/scripts/partial/menu.phtml
@@ -9,12 +9,14 @@ $items['home'] = array(
 $items['chambres'] = array(
     'controller' => 'products',
     'action'     => 'guesthouse-room-list',
+    'actions'     => array('guesthouse-room-list'),
     'label'      => _('GLOBAL_MENU_CHAMBRES')
 );
 /** Liste des logements du gite */
 $items['gite'] = array(
     'controller' => 'products',
     'action'     => 'chalet-room-list',
+    'actions'     => array('chalet-room-list'),
     'label'      => _('GLOBAL_MENU_GITE')
 );
 /** Liste des actualités */
