--- a/public/design/front/default/news/css/element.css
+++ b/public/design/front/default/news/css/element.css
@@ -1,8 +1,33 @@
+/* •••••••••••••••••••••••••••••••••• */
+
+#wrapper p.back {
+    text-align: right;
+    margin-bottom: 10px;
+}
+
+#wrapper h3 {
+    font-size: 1.6em;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    border-top: 1px dashed #4B4C43;
+    padding-top: 20px;
+}
 
 /* •••••••••••••••••••••••••••••••••• */
 
-#wrapper h3 {
-    font-size: 1.2em;
+#wrapper ul.illustrations li {
+    background-position: center center;
+    display: inline-block;
+    width: 167px;
+    height: 100px;
+    overflow: hidden;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 0 5px #555;
+    border-radius: 5px;
+}
+#wrapper ul.illustrations li img{
+    opacity: 0;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
