--- a/public/design/front/default/news/css/list.css
+++ b/public/design/front/default/news/css/list.css
@@ -19,14 +19,14 @@
     float: left;
 }
 
-#wrapper .spotlight .left h3 {
+#wrapper .spotlight .right h3 {
     margin-bottom: 15px;
     font-size: 2em;
     font-weight: normal;
 }
 
 #wrapper .spotlight .right {
-    width: 600px;
+    width: 560px;
     text-align: justify;
     float: left;
     font-weight: normal;
@@ -43,7 +43,7 @@
     background-color: #e8ead4;
     float: left;
     overflow: hidden;
-    width: 291px;
+    width: 272px;
     height: 150px;
     margin-bottom: 10px;
     margin-right: 10px;
