Locations terminées côté front, reste administration

--- a/application/modules/front/views/scripts/index/partial/activity.phtml
+++ b/application/modules/front/views/scripts/index/partial/activity.phtml
@@ -32,7 +32,7 @@ $activity = $this->activity;
         </a>
     </p>
     <p class="next">
-        <a href="<?= $this->baseUrl(); ?>activity/read/id/<?= $activity->id; ?>">
+        <a href="<?= $this->baseUrl(); ?>activities/read/id/<?= $activity->id; ?>">
             <?= _('HOME_ACTIVITY_NEXT') ?>
         </a>
     </p>
