--- a/application/modules/front/views/scripts/partial/footer.phtml
+++ b/application/modules/front/views/scripts/partial/footer.phtml
@@ -1,7 +1,9 @@
 <p>
     <?= _('FOOTER_COPYRIGHT'); ?> - <?= date('Y')?>
     |
-    <?= _('FOOTER_CREDITS'); ?>
+    <?= _('FOOTER_CREDITS'); ?> <a href="http://www.aroy.fr">Alexandre ROY</a>
+    |
+    <a href="<?= $this->baseUrl();?>partners/"><?= _('FOOTER_PARTENAIRES'); ?></a>
 </p>
 
 <p>
