--- a/application/modules/back/views/scripts/partial/menu.phtml
+++ b/application/modules/back/views/scripts/partial/menu.phtml
@@ -29,14 +29,16 @@ $items['activities'] = array(
 /** Liste des chambres d'hôtes */
 $items['chambres'] = array(
     'controller' => 'products',
-    'action'     => 'guesthouse-room-list',
+    'action'     => 'room',
+    'args'       => array('type'=>'guesthouse'),
     'label'      => _('GLOBAL_MENU_CHAMBRES'),
     'actions'    => array('edit', 'index', 'list')
 );
 /** Liste des logements du gite */
 $items['gite'] = array(
     'controller' => 'products',
-    'action'     => 'chalet-room-list',
+    'action'     => 'room',
+    'args'       => array('type'=>'chalet'),
     'label'      => _('GLOBAL_MENU_GITE'),
     'actions'    => array('edit', 'index', 'list')
 );
