--- a/application/modules/front/views/scripts/partial/menu.phtml
+++ b/application/modules/front/views/scripts/partial/menu.phtml
@@ -8,15 +8,15 @@ $items['home'] = array(
 /** Liste des chambres d'hôtes */
 $items['chambres'] = array(
     'controller' => 'products',
-    'action'     => 'guesthouse-room-list',
-    'actions'     => array('guesthouse-room-list'),
+    'action'     => 'room',
+    'args'       => array('type'=>'guesthouse'),
     'label'      => _('GLOBAL_MENU_CHAMBRES')
 );
 /** Liste des logements du gite */
 $items['gite'] = array(
     'controller' => 'products',
-    'action'     => 'chalet-room-list',
-    'actions'     => array('chalet-room-list'),
+    'action'     => 'room',
+    'args'       => array('type'=>'chalet'),
     'label'      => _('GLOBAL_MENU_GITE')
 );
 /** Liste des actualités */
