--- a/public/design/front/default/_common/css/form.css
+++ b/public/design/front/default/_common/css/form.css
@@ -1,6 +1,6 @@
 /* •••••••••••••••••••••••••••••••••• */
 form label {
-    width: 15%;
+    width: 17%;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
@@ -15,6 +15,11 @@ form textarea {
 form input[type=submit] {
     border: 1px solid transparent;
     background-image: -moz-linear-gradient(center top, #4D90FE, #4787ED);
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#4D90FE),to(#4787ED));
+    background-image: -webkit-linear-gradient(center top,#4D90FE,#4787ED);
+    background-image: -ms-linear-gradient(center top,#4D90FE,#4787ED);
+    background-image: -o-linear-gradient(center top,#4D90FE,#4787ED);
+    background-image: linear-gradient(center top,#4D90FE,#4787ED);
     box-shadow: 0 0 2px #bbb;
     font-size: 1.1em;
     padding: 5px;
@@ -23,6 +28,11 @@ form input[type=submit] {
 
 form input[type=submit]:hover {
     background-image: -moz-linear-gradient(center top , #4D90FE, #357AE8);
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#4D90FE),to(#357AE8));
+    background-image: -webkit-linear-gradient(center top,#4D90FE,#357AE8);
+    background-image: -ms-linear-gradient(center top,#4D90FE,#357AE8);
+    background-image: -o-linear-gradient(center top,#4D90FE,#357AE8);
+    background-image: linear-gradient(center top,#4D90FE,#357AE8);
     border: 1px solid #3079ED;
 }
 
