--- a/application/modules/back/views/scripts/partial/footer.phtml
+++ b/application/modules/back/views/scripts/partial/footer.phtml
@@ -1,5 +1,5 @@
 <p>
     <?= _('FOOTER_COPYRIGHT'); ?> - <?= date('Y'); ?>
     |
-    <?= _('FOOTER_CREDITS'); ?>
+    <?= _('FOOTER_CREDITS'); ?> <a href="http://www.aroy.fr">Alexandre ROY</a>
 </p>
