--- a/application/modules/back/views/scripts/partial/menu.phtml
+++ b/application/modules/back/views/scripts/partial/menu.phtml
@@ -18,29 +18,13 @@ $items['carrousel'] = array(
 $items['news'] = array(
     'controller' => 'news',
     'label'      => _('GLOBAL_MENU_NEWS'),
-    'actions'    => array('edit', 'index', 'list')
+    'actions'    => array('index', 'edit', 'list')
 );
 /** Liste des activités */
 $items['activities'] = array(
     'controller' => 'activities',
     'label'      => _('GLOBAL_MENU_ACTIVITIES'),
-    'actions'    => array('edit', 'index', 'list')
-);
-/** Liste des chambres d'hôtes */
-$items['chambres'] = array(
-    'controller' => 'products',
-    'action'     => 'room',
-    'args'       => array('type'=>'guesthouse'),
-    'label'      => _('GLOBAL_MENU_CHAMBRES'),
-    'actions'    => array('edit', 'index', 'list')
-);
-/** Liste des logements du gite */
-$items['gite'] = array(
-    'controller' => 'products',
-    'action'     => 'room',
-    'args'       => array('type'=>'chalet'),
-    'label'      => _('GLOBAL_MENU_GITE'),
-    'actions'    => array('edit', 'index', 'list')
+    'actions'    => array('index', 'edit', 'list')
 );
 /** Partenaires */
 $items['partners'] = array(
@@ -48,6 +32,19 @@ $items['partners'] = array(
     'action'     => 'partners',
     'label'      => _('GLOBAL_MENU_PARTNERS'),
     'actions'    => array('partners')
+);
+/** Liste des chambres d'hôtes */
+$items['location'] = array(
+    'controller' => 'products',
+    'action'     => 'list',
+    'label'      => _('GLOBAL_MENU_LOCATIONS'),
+    'actions'    => array('index', 'edit-category', 'edit-product', 'list')
+);
+/** Liste des logements du gite */
+$items['seasons'] = array(
+    'controller' => 'season',
+    'label'      => _('GLOBAL_MENU_SEASON'),
+    'actions'    => array('index', 'edit', 'list')
 );
 echo $this->displayMainMenu($items);
 ?>
