--- a/application/modules/front/views/scripts/products/partial/product/photos.phtml
+++ b/application/modules/front/views/scripts/products/partial/product/photos.phtml
@@ -4,5 +4,35 @@ $product = $this->product;
 ?>
 
 <div id="jq-photos" class="photos">
-
+    <?php if (count($product->illustrations) > 0): ?>
+    <ul class="illustrations">
+        <?php foreach ($product->illustrations as $illustration): ?>
+        <li style="background-image: url(<?=$this->displayImage(
+            $illustration->filename,
+            Llv_Constant_File_Category::PRODUCTS,
+            400,
+            9999
+        );?>)">
+            <a href="<?=
+                $this->displayImage(
+                    $illustration->filename,
+                    Llv_Constant_File_Category::PRODUCTS,
+                    1000,
+                    9999
+                );
+                ?>" rel="shadowbox[picture]">
+                <img
+                    src="<?=
+                        $this->displayImage(
+                            $illustration->filename,
+                            Llv_Constant_File_Category::PRODUCTS,
+                            400,
+                            9999
+                        );
+                        ?>"/>
+            </a>
+        </li>
+        <?php endforeach; ?>
+    </ul>
+    <?php endif; ?>
 </div>
