--- a/public/design/back/default/_common/css/form.css
+++ b/public/design/back/default/_common/css/form.css
@@ -18,13 +18,26 @@ form textarea {
 /* •••••••••••••••••••••••••••••••••• */
 
 form input[type=submit] {
-    border: 1px solid #999;
-    background-color: #ddd;
+    border: 1px solid transparent;
+    background-image: -moz-linear-gradient(center top, #4D90FE, #4787ED);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#4D90FE), to(#4787ED));
+    background-image: -webkit-linear-gradient(center top, #4D90FE, #4787ED);
+    background-image: -ms-linear-gradient(center top, #4D90FE, #4787ED);
+    background-image: -o-linear-gradient(center top, #4D90FE, #4787ED);
+    background-image: linear-gradient(center top, #4D90FE, #4787ED);
+    box-shadow: 0 0 2px #bbb;
+    padding: 5px;
+    color: #fff;
 }
 
 form input[type=submit]:hover {
-    background-color: #eee;
-    border: 1px solid #aaa;
+    background-image: -moz-linear-gradient(center top, #4D90FE, #357AE8);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#4D90FE), to(#357AE8));
+    background-image: -webkit-linear-gradient(center top, #4D90FE, #357AE8);
+    background-image: -ms-linear-gradient(center top, #4D90FE, #357AE8);
+    background-image: -o-linear-gradient(center top, #4D90FE, #357AE8);
+    background-image: linear-gradient(center top, #4D90FE, #357AE8);
+    border: 1px solid #3079ED;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
