--- a/public/design/front/default/products/css/location.css
+++ b/public/design/front/default/products/css/location.css
@@ -1,6 +1,19 @@
 /* •••••••••••••••••••••••••••••••••• */
 
-.introduction {
+#wrapper .page p.back {
+    text-align: right;
+    font-size: 1.1em;
+}
+
+/* •••••••••••••••••••••••••••••••••• */
+
+#wrapper .onglets {
+    margin-bottom: 20px;
+}
+
+/* •••••••••••••••••••••••••••••••••• */
+
+#wrapper .introduction {
     overflow: hidden;
     margin-bottom: 30px;
     text-align: justify;
@@ -8,23 +21,40 @@
 
 /* •••••••••••••••••••••••••••••••••• */
 
-.content {
+#wrapper .content {
 }
 
 /* •••••••••••••••••••••••••••••••••• */
 
-.photos {
+#wrapper .photos {
+    margin-top: 10px;
+}
+
+#wrapper .photos ul.illustrations li {
+    background-position: center center;
+    display: inline-block;
+    width: 269px;
+    height: 190px;
+    overflow: hidden;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0 0 5px #555;
+    border-radius: 5px;
+}
+
+#wrapper .photos ul.illustrations li img {
+    opacity: 0;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
 
-.prices {
+#wrapper .prices {
     overflow: hidden;
     margin-bottom: 30px;
     text-align: justify;
 }
 
-.prices h3 {
+#wrapper .prices h3 {
     font-size: 2em;
     border-bottom: 1px dashed #4B4C43;
     padding-bottom: 5px;
@@ -33,146 +63,146 @@
 
 /* ••••••••••••••••• */
 /** Tableau de disponibilités **/
-.prices .availability {
+#wrapper .prices .availability {
     width: 950px;
     /*width: 860px;*/
     margin: 0 auto;
 }
 
-.prices .availability > table {
+#wrapper .prices .availability > table {
     width: 100%;
     border-collapse: separate;
 }
 
-.prices .availability > table > tbody > tr > td {
+#wrapper .prices .availability > table > tbody > tr > td {
     padding-bottom: 30px;
 }
 
-.prices .availability table tbody tr td {
+#wrapper .prices .availability table tbody tr td {
     vertical-align: middle;
     text-align: center;
 }
 
 /* ••••••••••••••••• */
 /** Tableau de prix **/
-.prices .amount {
+#wrapper .prices .amount {
     margin: 0 auto;
 }
 
-.prices .amount table {
+#wrapper .prices .amount table {
     width: 100%;
 }
 
-.prices .amount table th,
+#wrapper .prices .amount table th,
 .prices .amount table td {
     padding: 5px;
     text-align: center;
 }
 
-.prices .amount table tr td:first-child {
+#wrapper .prices .amount table tr td:first-child {
     width: 120px;
 }
 
-.prices .amount table tbody tr:nth-child(odd) td {
+#wrapper .prices .amount table tbody tr:nth-child(odd) td {
     background-color: #D1D3BB;
 }
 
-.prices .amount table tbody tr:nth-child(even) td {
+#wrapper .prices .amount table tbody tr:nth-child(even) td {
     background-color: #acae9b;
 }
 
-.prices .amount table tbody tr td:hover {
+#wrapper .prices .amount table tbody tr td:hover {
     /*background-color: #888979;*/
     /*color: #d4d5c8;*/
     background-color: #7A7B6D;
     color: #C0C2AB;
 }
 
-.prices .amount table thead th,
-.prices .amount table tbody tr td:first-child {
+#wrapper .prices .amount table thead th,
+#wrapper .prices .amount table tbody tr td:first-child {
     background-color: #7A7B6D;
     color: #C0C2AB;
 }
 
-.prices .amount table tbody tr td.legende {
+#wrapper .prices .amount table tbody tr td.legende {
     background-color: #acae9b;
 }
 
-.prices .amount table tbody tr td.legende.saison {
+#wrapper .prices .amount table tbody tr td.legende.saison {
     background-color: #fff;
 }
 
-.prices .amount table tbody tr td.legende.saison1 {
+#wrapper .prices .amount table tbody tr td.legende.saison1 {
     background-color: #fba39f;
 }
 
-.prices .amount table tbody tr td.legende.saison2 {
+#wrapper .prices .amount table tbody tr td.legende.saison2 {
     background-color: #FFB87C;
 }
 
-.prices .amount table tbody tr td.legende.saison3 {
+#wrapper .prices .amount table tbody tr td.legende.saison3 {
     background-color: #F0E684;
 }
 
-.prices .amount table tbody tr td.legende.saison4 {
+#wrapper .prices .amount table tbody tr td.legende.saison4 {
     background-color: #90EE90;
 }
 
-.prices .amount table tbody tr td.legende.saison5 {
+#wrapper .prices .amount table tbody tr td.legende.saison5 {
     background-color: #FF7973;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
 
-.prices .calendar {
+#wrapper .prices .calendar {
     margin-top: 30px;
     width: 100%;
 }
 
-.prices .calendar table.calendrier {
+#wrapper .prices .calendar table.calendrier {
     width: 100%;
 }
 
-.prices .calendar table.calendrier th,
-.prices .calendar table.calendrier td {
+#wrapper .prices .calendar table.calendrier th,
+#wrapper .prices .calendar table.calendrier td {
     padding: 5px;
     text-align: center;
     vertical-align: middle;
 }
 
-.prices .calendar table.calendrier td.mois table thead tr.days td {
+#wrapper .prices .calendar table.calendrier td.mois table thead tr.days td {
     background-color: #308CC6;
     color: #FFFFFF;
 }
 
-.prices .calendar table.calendrier td.mois table thead tr.mois th {
+#wrapper .prices .calendar table.calendrier td.mois table thead tr.mois th {
     font-weight: bold;
 }
 
-.prices .calendar table.calendrier td.mois table tbody tr.saison td {
+#wrapper .prices .calendar table.calendrier td.mois table tbody tr.saison td {
 }
 
-.prices .calendar table.calendrier td.mois table tbody tr.saison1 td {
+#wrapper .prices .calendar table.calendrier td.mois table tbody tr.saison1 td {
     background-color: #fba39f;
 }
 
-.prices .calendar table.calendrier td.mois table tbody tr.saison2 td {
+#wrapper .prices .calendar table.calendrier td.mois table tbody tr.saison2 td {
     background-color: #FFB87C;
 }
 
-.prices .calendar table.calendrier td.mois table tbody tr.saison3 td {
+#wrapper .prices .calendar table.calendrier td.mois table tbody tr.saison3 td {
     background-color: #F0E684;
 }
 
-.prices .calendar table.calendrier td.mois table tbody tr.saison4 td {
+#wrapper .prices .calendar table.calendrier td.mois table tbody tr.saison4 td {
     background-color: #90EE90;
 }
 
-.prices .calendar table.calendrier td.mois table tbody tr.saison5 td {
+#wrapper .prices .calendar table.calendrier td.mois table tbody tr.saison5 td {
     background-color: #FF7973;
 }
 
-.prices .calendar table.calendrier td.mois table tbody tr td.week {
+#wrapper .prices .calendar table.calendrier td.mois table tbody tr td.week {
     background-color: #DDF0FD;
     color: #308CC6;
 }
@@ -196,46 +226,46 @@ span.prix_location em {
 
 /* •••••••••••••••••••••••••••••••••• */
 
-.reservation {
+#wrapper .reservation {
     overflow: hidden;
 }
 
-.reservation form fieldset {
+#wrapper .reservation form fieldset {
     float: left;
     width: 48%;
 }
 
-.reservation form fieldset#fieldset-informations {
+#wrapper .reservation form fieldset#fieldset-informations {
     margin-right: 4%;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
 
-.reservation form label {
+#wrapper .reservation form label {
     font-size: .9em;
 }
 
-.reservation form fieldset#fieldset-informations p.textarea_element label {
+#wrapper .reservation form fieldset#fieldset-informations p.textarea_element label {
     width: 100%;
     padding-bottom: 5px;
 }
 
-.reservation form fieldset#fieldset-informations p.select_element label {
+#wrapper .reservation form fieldset#fieldset-informations p.select_element label {
     width: 60%;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
-.reservation form fieldset#fieldset-demande p.select_element label,
-.reservation form fieldset#fieldset-demande p.default_element label {
+#wrapper .reservation form fieldset#fieldset-demande p.select_element label,
+#wrapper .reservation form fieldset#fieldset-demande p.default_element label {
     width: 40%;
 }
 
-.reservation form fieldset#fieldset-demande p.textarea_element label {
+#wrapper .reservation form fieldset#fieldset-demande p.textarea_element label {
     width: 100%;
     padding-bottom: 5px;
 }
 
-.reservation form fieldset#fieldset-demande p.submit_element {
+#wrapper .reservation form fieldset#fieldset-demande p.submit_element {
     float: right;
 }
 
