Produits : Contenu + illustration Reste tarifs et dispo
Reste Goldbook Front et Back

--- a/application/modules/back/views/scripts/activities/edit.phtml
+++ b/application/modules/back/views/scripts/activities/edit.phtml
@@ -36,7 +36,8 @@ $this->headLink()->appendStylesheet($this->buildDesignUrl('activities/css/index.
             '/activities/partial/illustration.phtml',
             array(
                  'formFileUploader' => $formFileUploader,
-                 'illustrations'    => $this->illustrations
+                 'illustrations'    => $this->illustrations,
+                 'idActivite'    => $this->idActivite,
             )
         );
         ?>
