--- a/application/modules/back/views/scripts/news/edit.phtml
+++ b/application/modules/back/views/scripts/news/edit.phtml
@@ -36,7 +36,8 @@ $this->headLink()->appendStylesheet($this->buildDesignUrl('news/css/index.css'))
             '/news/partial/illustration.phtml',
             array(
                  'formFileUploader' => $formFileUploader,
-                 'illustrations'    => $this->illustrations
+                 'illustrations'    => $this->illustrations,
+                 'idNews'    => $this->idNews,
             )
         );
         ?>
