--- a/public/design/default/default/_common/css/global.css
+++ b/public/design/default/default/_common/css/global.css
@@ -63,6 +63,18 @@ h2 {
     margin-bottom: 20px;
 }
 
+h4 {
+    font-size: 1.5em;
+    border-bottom: 1px dashed #4B4C43;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+}
+
+ul {
+    list-style-type: disc;
+    list-style-position: inside;
+}
+
 /* •••••••••••••••••••••••••••••••••• */
 
 #container {
